# solana-dioxus-app

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  pre_build.sh  rust-toolchain.toml  vercel.json
lib/tradingview/: Cargo.toml
lib/tradingview/src/: lib.rs
lib/wallet-adapter/: Cargo.toml
lib/wallet-adapter-base/: Cargo.toml
lib/wallet-adapter-base/src/: adapter.rs  errors.rs  lib.rs
lib/wallet-adapter-dioxus/: Cargo.toml
lib/wallet-adapter-dioxus/src/: connection_provider.rs  lib.rs  use_connection.rs  use_local_storage.rs  use_wallet.rs  wallet_provider.rs
lib/wallet-adapter/src/: backpack.rs  lib.rs  nightly.rs  phantom.rs  proxy.rs  solflare.rs  wasmgen.rs
src/: client.rs  hot_keys.rs  layout.rs  main.rs  route.rs
src/components/: account_info_table.rs  blocks_table.rs  card.rs  chart.rs  connect_button.rs  mod.rs  modal.rs  navbar.rs  page_control.rs  search_bar.rs  thread_info_table.rs  thread_sim_logs.rs  threads_table.rs  transaction_history_table.rs  transaction_info.rs
src/components/layout/: footer.rs  mod.rs  navbar.rs
src/components/swap/: mod.rs
src/components/trade/: mod.rs
src/context/: cluster.rs  mod.rs  rpc.rs  search.rs  user.rs
src/hooks/: mod.rs  use_pagination.rs
src/pages/: account.rs  mod.rs  not_found.rs  page.rs  programs.rs  thread.rs  threads.rs  trade.rs  transaction.rs
src/storage/: mod.rs
src/types/: mod.rs  user.rs
src/utils/: client.rs  format.rs  mod.rs
